# wireguard-mesh-manager

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  AGENTS.md  BACKUP_RESTORE.md  BOOTSTRAP_TOKEN_IMPLEMENTATION.md  CODING_CONVENTIONS.md  LICENSE  MIGRATION.md  README.md  TODO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pytest.ini
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  openapi.json  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  main.py
backend/app/cli/: __init__.py  backup.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/middleware/: __init__.py  auth.py  csrf.py  database_session.py  error_handlers.py  logging_middleware.py  metrics.py  rate_limit.py  request_hardening.py  response_hardening.py
backend/app/routers/: __init__.py  api_keys.py  audit.py  backup.py  config_lint.py  csrf.py  device_links.py  devices.py  export.py  health.py  key_rotation.py  locations.py  master_password.py  network_utils.py  networks.py  operational_settings.py  utils.py
backend/app/schemas/: backup.py  config_lint.py  device_config.py  device_links.py  devices.py  export.py  key_rotation.py  locations.py  networks.py
backend/app/services/: api_key.py  audit.py  audit_retention.py  backup.py  config_lint.py  device_config.py  device_links.py  devices.py  export.py  key_rotation.py  locations.py  master_password.py  master_session.py  metrics.py  networks.py
backend/app/utils/: __init__.py  api_key.py  encryption.py  key_management.py  logging.py  master_password.py  password_policy.py  validation.py
backend/migrations/: env.py
backend/migrations/versions/: initial_schema.py
backend/scripts/: db_backup.py  generate_openapi.py
backend/tests/: __init__.py  conftest.py  test_api_key_utils.py  test_api_keys_api.py  test_api_keys_service.py  test_audit_events_api.py  test_audit_integration.py  test_audit_retention.py  test_audit_retention_service.py  test_audit_service.py  test_authentication_middleware.py  test_authz_regression.py  test_authz_simple.py  test_backup_api.py  test_backup_service.py  test_bootstrap_auth.py  test_config.py  test_config_lint.py  test_csrf_middleware.py  test_csrf_router.py  test_database.py  test_database_constraints.py  test_database_simple.py  test_db_backup.py  test_debug.py  test_deterministic_ordering.py  test_device_config_api.py  test_device_config_auth.py  test_device_config_encryption.py  test_device_config_retrieval_integration.py  test_device_config_service.py  test_device_config_service_access.py  test_device_edge_cases.py  test_device_schemas.py  test_devices_api.py  test_devices_authorization.py  test_devices_service.py  test_export_api.py  test_export_simple.py  test_golden_configs.py  (+25 more)
backend/tests/golden/device_configs/: sample_device_different_locations.conf  sample_device_disabled_peer.conf  sample_device_mobile.json  sample_device_network_psk.conf  sample_device_same_location.conf  sample_device_wg.conf
docs/: DEPLOYMENT_TOPOLOGY.md  DEVICE_CONFIG_API.md  DEVICE_CONFIG_FETCHER.md  FRONTEND_ARCHITECTURE.md  MESH_TOPOLOGY_ARCHITECTURE.md  PRODUCTION_RUNBOOK.md  (+7 more)
(+163 files in other folders)
